# modern-cmake

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  environment.yaml  environment.yml  generate_docs.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_sources/: generate_docs.rst.txt
cmake/: CompilerWarnings.cmake  FactConfig.cmake.in  StaticAnalyzers.cmake  fact.pc.in
docs/source/: conf.py.in  generate_docs.rst  index.rst
include/fact/: fact.hpp
requirements/: docs.txt
src/: CMakeLists.txt  fact.cpp
test/: CMakeLists.txt  tests.cpp
test/downstream/: CMakeLists.txt  main.cpp
